# tfm-trading-bot

./: .env.example  .gitignore  DEPLOY.md  LICENSE  README.md  tfm-init.sh
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: market.py  trading.py
backend/app/core/: broker_adapter.py  config.py  dependencies.py
backend/app/services/: __init__.py  ai_engine.py  demo_broker.py  market_data.py  order_executor.py
backend/tests/: test_ai_engine.py  test_broker.py  test_main.py  test_market_data.py  test_portfolio.py
docs/: DEPLOY.md  academic_deploy_checklist.md  defense_qa_prep.md  entrega_final_structure.md  presentacion.pptx  presentacion_defensa.md  presentacion_ejecutiva.md  presentacion_ejecutiva.pptx  security_audit_report.md  tfm_compliance.md
frontend/: middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/market/[[...path]]/: route.ts
frontend/src/app/api/protected/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/invest/: page.tsx
frontend/src/app/investment/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/portfolio/: page.tsx
frontend/src/components/investment/: InvestmentFlowDrawer.tsx  useInvestmentSession.ts
frontend/src/hooks/: useSession.ts
frontend/src/lib/api/: client.ts
frontend/src/lib/supabase/: client.ts
frontend/src/types/: index.ts
infra/: deploy-vercel.ps1  deploy-vercel.sh  init-env.sh
(+5 files in other folders)
