[tool.poetry]
name = "tfm-bot-trading-backend"
version = "0.1.0"
description = "FastAPI Backend for TFM Trading Bot"
authors = ["Juan Manuel Garcia Jurado <juanm.garcia.jurado@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.6.0"}
yfinance = "^0.2.38"
pandas = "^2.2.0"
numpy = "^1.26.0"
redis = "^5.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.3.0"
mypy = "^1.9.0"

[tool.poetry.scripts]
test = "pytest"
lint = "ruff check . && mypy ."

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "tests"]
